[tool.poetry]
name = "03-academy-bc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "03_academy_bc"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
cognite-sdk = "^7.74.5"
cognite-toolkit = "0.5.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
